--- a/style.css
+++ b/style.css
@@ -14,16 +14,42 @@
 .divider{
     margin-top: 20px;
     border-top: 20 px solid black;
+    left: 68px;
 }
 .relative-section{
     position: relative;
     left: 700px;
     bottom: -50px;
+    width: 501px;
+    height: 604px;
 }
 .imagePosition{
     position: absolute;
-    bottom: 130px;
-    left: 150px;
+    bottom: 200px;
+    left: 200px; 
+    width: 501px;
+height: 604px;  
+}
+.star-image{
+position: absolute;
+left: 1%;
+right: 100%;
+top: 60;
+bottom: 15%;
+}
+.first-image{
+position: absolute;
+left: 88%;
+right: 5%;
+top: 15%;
+bottom: 87%;
+}
+.social-icons{
+position: absolute;
+width: 40px;
+height: 125px;
+left: 570px;
+top: 200px;
 }
 .rectangle1{
     position: absolute;
@@ -33,7 +59,7 @@
     width: 130px;
     height: 30px;
     left: 5px;
-    bottom: -100px;
+    bottom: 300px;
 }
 .rectangle2{
         position: absolute;
@@ -45,3 +71,77 @@
         left: 170px;
         top: 1px;
 }
+.footer{
+    color:rgb(201, 200, 200);
+    position: relative;
+    bottom: 10px;
+    left: 5x;
+}
+.right-link{
+    color: rgb(86, 231, 86);
+    position: absolute;
+    bottom: -630px;
+    right: 20px;
+}
+.products{
+    display: flex;
+    flex:0;
+    flex-direction: row;
+    flex-wrap: wrap;  
+}
+.rectangle3{
+    position: absolute;
+    background-color: green;
+    color: white;
+    text-align: left;
+    width: 1300px;
+    height: 100px;
+    left: 5px;
+    bottom: -800px;
+}
+.box{
+    background-color: green;
+    padding: 10px;
+    display: inline-block;
+    width: 1200px;
+    height: 200px;
+}
+.navclass1{
+    color: white;
+    text-align: right;
+    top: 60px;   
+}
+.GoGreen{
+    color: white;
+}
+.divider1{
+    margin-top: 50px;
+    border-top: 20 px solid white;
+    left: 68px;
+}
+.navclass2{
+    color: white;
+    text-align: right;
+    top: 60px;
+}
+.second-image{
+position: absolute;
+width: 1440px;
+height: 1079px;
+left: 0px;
+top: 318px;
+}
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
